--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,4 +1,7 @@
-.header
-    background-color: red
-    &-col
-        font-size: 15px
+@import "_options"
+@import "_defaults"
+@import "_fonts"
+
+
+
+@import "_media.sass"
