--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,6 +16,19 @@ html
     margin: 0 auto
     padding: 0 10px
 
+.btn
+    display: inline-block
+    text-align: center
+    border: 1px solid #959595
+    border-radius: 6px
+
+section:nth-child(even)
+    background-color: $sectionsBackground
+    border-bottom: 1px solid #ebedf0
+
+section:nth-child(odd)
+    border-bottom: 1px solid #ebedf0
+
 .header 
     position: absolute
     top: 3em
@@ -30,12 +43,15 @@ html
     &-logo
         font-size: 1.4em
         font-weight: 700
-        &:focus
+        &:hover, &:focus
             color: $accentColor
     &-list
         display: flex
         li + li
             margin-left: 1.5em
+        &-link
+            &:hover, &:focus
+                color: $accentColor
 
 .hero
     background-color: #000000
@@ -63,15 +79,68 @@ html
         &:hover, &:focus 
             background-color: $accentColor 
 
+.promotion > .container
+    display: flex
+    align-items: center
 
-.btn
-    display: inline-block
+.promotion
+    &-img
+        margin: -5em 0 3.3em 0
+    &-list
+        &-title 
+            font-size: 1.6em
+            line-height: 1.25
+            color: $mainTitleColor
+        &-text
+            margin-top: 1.7em
+            line-height: 1.6
+            color: $mainSubtitleColor
+    
+.features
+    padding: 5.3em 0 5.7em 0
     text-align: center
-    border: 1px solid #959595
-    border-radius: 6px
+    &-title
+        font-size: 2em
+        color: $mainTitleColor
+    &-text
+        margin-top: 2em
+        font-size: 1.4em
+        color: $mainSubtitleColor
+    &-list
+        display: flex
+        margin: 3.3em -0.7em 0 -0.7em
+    &-list > li
+        width: 25%
+        padding: 0.7em
+    &-card
+        padding: 1.8em
+        border: 1px solid #dfe3ea
+        &-title
+            margin-top: 2em
+            font-size: 1.2em
+            color: #42474e
+        &-text
+            margin-top: 1em
+            font-size: 0.9em
+            line-height: 1.7
+            color: #898f98
+        &-btn
+            margin-top: 1.7em
+            padding: 0.8em 1.2em
+            min-width: 7em
+            font-size: 0.9em
+            color: #898f98
+            &:hover, &:focus
+                background-color: $accentColor
+                color: #ffffff
 
+.testimonials
+    padding: 4.2em 0 2.7em 0
+    text-align: center
+    &-title
+        font-size: 2em
+        color: $mainTitleColor
 
-   
 
         
 
