--- a/sass/style.sass
+++ b/sass/style.sass
@@ -76,6 +76,7 @@ section:nth-child(odd)
     &-btn
         min-width: 11.7em
         padding: 1.1em 2em
+        font-size: 1.1em
         &:hover, &:focus 
             background-color: $accentColor 
 
@@ -145,17 +146,18 @@ section:nth-child(odd)
         display: flex
         justify-content: space-between
         margin-top: 4em
-        border: 6px
         color: #656b74
         li + li
             margin-left: 3.7em
     &-card
         &-text
             padding: 1.4em
-            max-width: 18.6em
+            max-width: 20em
             font-size: 0.9em
             line-height: 1.4
             text-align: left
+            border-radius: 6px
+            box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1)
             background-color: #ffffff
         &-person
             display: flex
@@ -179,6 +181,44 @@ section:nth-child(odd)
             &:hover, &:focus 
                color: $accentColor 
                text-decoration: underline
+    &-radio 
+        margin-top: 3em
+    &-label
+        display: inline-block
+        width: 1.1em
+        height: 1.1em
+        border: 2px solid $accentColor
+        border-radius: 50%
+        margin-left: 0.1em
+        &:first-child
+           margin-left: 0 
+    &-input
+        display: none
+        &:checked + label
+            background-color: $accentColor
+            
+.trial
+    padding: 5.8em 0 5.3em 0
+    text-align: center
+    background-color: $accentColor
+    &-title
+        font-size: 2.4em
+    &-text
+        margin-top: 2em
+        font-size: 1.4em
+        color: #95cde0
+    &-btn
+        min-width: 11.7em
+        margin-top: 2em
+        padding: 1.1em 2em
+        font-size: 1.1em
+        border-color: #ffffff
+        &:hover, &:focus 
+            background-color: #ffffff
+            color: $accentColor
+    
+
+
 
 
 
