--- a/sass/style.sass
+++ b/sass/style.sass
@@ -189,7 +189,7 @@ section:nth-child(odd)
         height: 1.1em
         border: 2px solid $accentColor
         border-radius: 50%
-        margin-left: 0.1em
+        margin-left: 0.2em
         &:first-child
            margin-left: 0 
     &-input
@@ -206,6 +206,7 @@ section:nth-child(odd)
     &-text
         margin-top: 2em
         font-size: 1.4em
+        font-weight: 300
         color: #95cde0
     &-btn
         min-width: 11.7em
