--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ table, thead, tbody, tfoot, tr, th, td {
 }
 
 input, option, textarea {
-  border-radius: 0 !important;
+  border-radius: 0;
   box-shadow: none !important;
   font-size: inherit;
   font-family: inherit;
@@ -92,7 +92,18 @@ section:nth-child(even) {
 }
 
 section:nth-child(odd) {
+  background-color: #ffffff;
   border-bottom: 1px solid #ebedf0;
+}
+
+section:first-child {
+  background-color: #000000;
+  border: none;
+}
+
+section:last-child {
+  background-color: #2095bc;
+  border: none;
 }
 
 .header {
@@ -125,7 +136,6 @@ section:nth-child(odd) {
 }
 
 .hero {
-  background-color: #000000;
   padding-top: 14em;
   padding-bottom: 8.7em;
 }
@@ -149,7 +159,7 @@ section:nth-child(odd) {
   margin-left: 0.7em;
 }
 .hero-buttons-btn {
-  min-width: 11.7em;
+  min-width: 11.7rem;
   padding: 1.1em 2em;
   font-size: 1.1em;
 }
@@ -200,7 +210,9 @@ section:nth-child(odd) {
 }
 .features-card {
   padding: 1.8em;
-  border: 1px solid #dfe3ea;
+  border: 1px solid;
+  -o-border-image: linear-gradient(#dfe3ea, #ffffff 80%) 1;
+     border-image: linear-gradient(#dfe3ea, #ffffff 80%) 1;
 }
 .features-card-title {
   margin-top: 2em;
@@ -243,14 +255,24 @@ section:nth-child(odd) {
   margin-left: 3.7em;
 }
 .testimonials-card-text {
+  position: relative;
   padding: 1.4em;
   max-width: 20em;
   font-size: 0.9em;
   line-height: 1.4;
   text-align: left;
   border-radius: 6px;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.1));
   background-color: #ffffff;
+}
+.testimonials-card-text:before {
+  position: absolute;
+  top: 100%;
+  left: 1.8em;
+  content: "";
+  border-style: solid;
+  border-color: transparent transparent transparent #ffffff;
+  border-width: 0 1.2em 1.2em 1.2em;
 }
 .testimonials-card-person {
   display: flex;
@@ -304,7 +326,6 @@ section:nth-child(odd) {
 .trial {
   padding: 5.8em 0 5.3em 0;
   text-align: center;
-  background-color: #2095bc;
 }
 .trial-title {
   font-size: 2.4em;
@@ -316,7 +337,7 @@ section:nth-child(odd) {
   color: #95cde0;
 }
 .trial-btn {
-  min-width: 11.7em;
+  min-width: 11.7rem;
   margin-top: 2em;
   padding: 1.1em 2em;
   font-size: 1.1em;
@@ -325,4 +346,75 @@ section:nth-child(odd) {
 .trial-btn:hover, .trial-btn:focus {
   background-color: #ffffff;
   color: #2095bc;
+}
+
+.footer {
+  padding-top: 3rem;
+  background-color: #3e434a;
+  font-size: 0.9em;
+  color: #a5abb2;
+}
+.footer-list {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 5.7rem;
+}
+.footer-list > li:last-child {
+  max-width: 20.5rem;
+}
+.footer-card {
+  display: inline-flex;
+  flex-direction: column;
+}
+.footer-card > .footer-card-link {
+  margin-top: 1rem;
+}
+.footer-card-title + .footer-card-link, .footer-card-title + .footer-card-text {
+  margin-top: 2rem;
+}
+.footer-card-link:hover, .footer-card-link:focus {
+  color: #2095bc;
+}
+.footer-card-title {
+  font-size: 0.9em;
+}
+.footer-card-text {
+  line-height: 1.6;
+}
+.footer-card-form {
+  display: flex;
+  align-items: center;
+  margin-top: 1.3rem;
+}
+.footer-card-form-input {
+  min-width: 13.6rem;
+  padding: 0.65rem;
+  border: none;
+  border-radius: 6px;
+  font-size: 0.8em;
+}
+.footer-card-form-input::-moz-placeholder {
+  color: #cbcbcb;
+}
+.footer-card-form-input:-ms-input-placeholder {
+  color: #cbcbcb;
+}
+.footer-card-form-input::placeholder {
+  color: #cbcbcb;
+}
+.footer-card-form-btn {
+  margin-left: 0.7rem;
+  padding: 0.8rem 1.1rem;
+  background-image: linear-gradient(#565c64, #4a4f57);
+  border: none;
+  color: #bbc1c8;
+}
+.footer-card-form-btn:hover, .footer-card-form-btn:focus {
+  background-image: linear-gradient(#4a4f57, #565c64);
+  color: #ffffff;
+}
+.footer-copyright {
+  padding: 2.2rem 0 2.5rem 0;
+  border-top: 1px solid #a5abb2;
+  color: #a5abb2;
 }/*# sourceMappingURL=style.css.map */
