--- a/sass/_defaults.sass
+++ b/sass/_defaults.sass
@@ -17,7 +17,7 @@ table, thead, tbody, tfoot, tr, th, td
     box-sizing: border-box
   
 input, option, textarea
-    border-radius: 0 !important
+    border-radius: 0
     box-shadow: none !important
     font-size: inherit
     font-family: inherit
