--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,8 @@ section:nth-child(odd) {
 
 section:first-child {
   background-color: #000000;
+  background-image: linear-gradient(to left, #000, rgba(255, 255, 255, 0.2), #000);
+  box-shadow: inset 0 150px 150px 0 #000;
   border: none;
 }
 
