--- a/css/style.css
+++ b/css/style.css
@@ -390,7 +390,7 @@ section:last-child {
 }
 .footer-card-form-input {
   min-width: 13.6rem;
-  padding: 0.65rem;
+  padding: 0.7rem;
   border: none;
   border-radius: 6px;
   font-size: 0.8em;
@@ -406,7 +406,7 @@ section:last-child {
 }
 .footer-card-form-btn {
   margin-left: 0.7rem;
-  padding: 0.8rem 1.1rem;
+  padding: 0.7rem 1.1rem;
   background-image: linear-gradient(#565c64, #4a4f57);
   border: none;
   color: #bbc1c8;
@@ -419,4 +419,69 @@ section:last-child {
   padding: 2.2rem 0 2.5rem 0;
   border-top: 1px solid #a5abb2;
   color: #a5abb2;
+}
+
+/* 1280 980 767 640 480 */
+@media (max-width: 1280px) {
+  .container {
+    max-width: 980px;
+  }
+  .hero-title {
+    max-width: 54%;
+  }
+}
+@media (max-width: 980px) {
+  .container {
+    max-width: 767px;
+  }
+  .hero-title {
+    max-width: 69%;
+  }
+  .hero-text {
+    max-width: 70%;
+  }
+  .promotion-img {
+    width: 56%;
+    margin: -3.3em 0 3.3em 0;
+  }
+  .features-list > li {
+    width: 50%;
+  }
+  .features-card {
+    max-width: 15.3em;
+    margin: 0 auto;
+  }
+  .footer-card-form-input {
+    min-width: 12rem;
+  }
+  .footer-list > li:last-child {
+    max-width: 19rem;
+  }
+}
+@media (max-width: 767px) {
+  .container {
+    max-width: 640px;
+  }
+  .hero {
+    text-align: center;
+  }
+  .hero-title {
+    max-width: 100%;
+  }
+  .hero-text {
+    max-width: 100%;
+  }
+  .hero-buttons {
+    justify-content: center;
+  }
+  .promotion {
+    padding: 3.3em 0;
+  }
+  .promotion-img {
+    width: 47%;
+    margin: 0;
+  }
+  .testimonials-list > li:last-child {
+    display: none;
+  }
 }/*# sourceMappingURL=style.css.map */
