--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,18 @@ section:last-child {
 .nav-logo:hover, .nav-logo:focus {
   color: #2095bc;
 }
+.nav-mobile-btn, .nav-mobile-checkbox {
+  display: none;
+}
+.nav-mobile-btn {
+  padding: 0.7em 1em;
+}
+.nav-mobile-btn:hover, .nav-mobile:focus {
+  background-color: #2095bc;
+}
+.nav-mobile-checkbox:checked + .nav-list {
+  display: inline-flex;
+}
 .nav-list {
   display: flex;
 }
@@ -462,6 +474,30 @@ section:last-child {
   .container {
     max-width: 640px;
   }
+  .nav-mobile-btn {
+    display: block;
+  }
+  .nav-list {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 2;
+  }
+  .nav-list li + li {
+    margin-left: 0;
+  }
+  .nav-list-link {
+    display: block;
+    padding: 15px;
+    font-size: 1.5em;
+  }
   .hero {
     text-align: center;
   }
@@ -483,5 +519,94 @@ section:last-child {
   }
   .testimonials-list > li:last-child {
     display: none;
+  }
+  .footer-list {
+    flex-wrap: wrap;
+  }
+  .footer-list > li {
+    width: 50%;
+  }
+  .footer-list > li:last-child {
+    max-width: none;
+  }
+  .footer-list > li + li {
+    margin-top: 3rem;
+  }
+  .footer-list > li:nth-child(2) {
+    margin-top: 0rem;
+  }
+  .footer-card {
+    display: flex;
+    align-items: center;
+  }
+}
+@media (max-width: 640px) {
+  .container {
+    max-width: 480px;
+  }
+  .promotion {
+    text-align: center;
+  }
+  .promotion-img {
+    display: none;
+  }
+  .testimonials-list {
+    justify-content: center;
+  }
+  .testimonials-list > li:nth-child(2) {
+    display: none;
+  }
+  .footer-list > li {
+    width: 100%;
+  }
+  .footer-list > li:nth-child(2) {
+    margin-top: 3rem;
+  }
+  .footer-list > li:last-child {
+    text-align: center;
+    max-width: 20.5rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media (max-width: 480px) {
+  .container {
+    max-width: 300px;
+  }
+  .nav-logo {
+    font-size: 1.2em;
+  }
+  .nav-mobile-btn {
+    padding: 0.5em 0.7em;
+    font-size: 1em;
+  }
+  .hero {
+    padding-top: 12em;
+    padding-bottom: 5.7em;
+  }
+  .hero-title {
+    font-size: 2.7em;
+  }
+  .hero-buttons {
+    flex-direction: column;
+  }
+  .hero-buttons li + li {
+    margin-left: 0;
+    margin-top: 0.7em;
+  }
+  .features-list > li {
+    width: 100%;
+  }
+  .footer-list > li:last-child {
+    max-width: none;
+  }
+  .footer-card-form {
+    flex-direction: column;
+  }
+  .footer-card-form-input {
+    min-width: 15rem;
+  }
+  .footer-card-form-btn {
+    margin-top: 0.7em;
   }
 }/*# sourceMappingURL=style.css.map */
