--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -31,6 +31,26 @@
 @media (max-width: 767px)
     .container
         max-width: 640px
+    .nav-mobile-btn 
+         display: block
+    .nav-list 
+        display: none
+        position: fixed
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
+        background: rgba(0, 0, 0, 0.8)
+        justify-content: center
+        align-items: center
+        flex-direction: column
+        z-index: 2
+        & li + li 
+            margin-left: 0
+        &-link
+            display: block
+            padding: 15px
+            font-size: 1.5em
     .hero
         text-align: center
         &-title 
@@ -47,5 +67,74 @@
     .testimonials-list > li:last-child
         display: none
     .footer
+        &-list
+            flex-wrap: wrap
+            & > li
+                width: 50%
+            & > li:last-child
+                max-width: none
+            & > li + li
+                margin-top: 3rem 
+            & > li:nth-child(2)
+                margin-top: 0rem       
+        &-card
+            display: flex
+            align-items: center
 
-            
+@media (max-width: 640px)
+    .container
+        max-width: 480px  
+    .promotion
+        text-align: center  
+        &-img
+            display: none
+    .testimonials-list
+        justify-content: center
+        & > li:nth-child(2)
+            display: none
+    .footer
+        &-list
+            & > li
+                width: 100%
+            & > li:nth-child(2)
+                margin-top: 3rem
+            & > li:last-child
+                text-align: center
+                max-width: 20.5rem
+                margin: 
+                    left: auto
+                    right: auto
+
+@media (max-width: 480px)
+    .container
+        max-width: 300px  
+    .nav
+        &-logo
+            font-size: 1.2em
+        &-mobile
+            &-btn
+                padding: 0.5em 0.7em
+                font-size: 1em
+    .hero
+        padding-top: 12em
+        padding-bottom: 5.7em
+        &-title
+            font-size: 2.7em
+        &-buttons
+            flex-direction: column
+            & li + li
+                margin-left: 0
+                margin-top: 0.7em
+    .features-list > li
+        width: 100%
+    .footer
+        &-list
+            & > li:last-child
+                max-width: none
+        &-card
+            &-form 
+                flex-direction: column
+                &-input
+                    min-width: 15rem
+                &-btn
+                    margin-top: 0.7em
