--- a/sass/style.sass
+++ b/sass/style.sass
@@ -21,6 +21,7 @@ html
     text-align: center
     border: 1px solid #959595
     border-radius: 6px
+    transition: 0.2s
 
 section:nth-child(even)
     background-color: $sectionsBackground
